markdown: Reduce seconed li bottom padding

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -45,7 +45,7 @@
     pre {
       padding-bottom: 10px !important;
     }
-    padding: 5px 0 2px 2.5em;
+    padding: 5px 0 0 2.5em;
   }
 
   li > p {
