social-login: Make more graceful login
- Keep current page after logged in
- Don't need to refresh after logged in

--- a/app/views/common/loginDialog.scala.html
+++ b/app/views/common/loginDialog.scala.html
@@ -62,6 +62,8 @@
                 <a href="@p.getUrl" class="ybtn oauth-login-btn">@Html(providerWithLogo(p.getKey))</a>
               }
             }
+          } else {
+            <a href="@routes.Application.oAuthLogout()" class="ybtn oauth-login-btn">@Messages("title.logout")</a>
           }
         }
       </div>
