--- a/app/views/user/edit.scala.html
+++ b/app/views/user/edit.scala.html
@@ -41,7 +41,7 @@
             </dd>
           <dt>@Messages("user.name")</dt>
           <dd class="mt10">
-            <input type="text" name="name" class="text" value="@user.name">
+            <input type="text" name="name" class="text" value="@user.name" @if(Application.useSocialNameSync){readonly}>
           </dd>
           <dt>@Messages("user.email")</dt>
           <dd class="mt10">
