web-browser: Add browser cache refresh warning

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6652,3 +6652,8 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         height: 40px;
     }
 }
+
+.cache-warning {
+    color: darkviolet;
+    font-weight: bold;
+}
