--- a/app/views/site/lostPassword.scala.html
+++ b/app/views/site/lostPassword.scala.html
@@ -1,24 +1,12 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2013 NAVER Corp.
-* http://yobi.io
-*
-* @author Suwon Chae
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
 @(message: String, sender: String, errorMessage: String, isSent: Boolean)
+
+@import org.apache.commons.lang.StringUtils
 
 @siteLayout(message, utils.MenuType.NONE) {
 <div class="page full">
@@ -51,14 +39,14 @@
           <label for="loginId">@Messages("user.loginId")</label>
         </dt>
         <dd>
-          <input type="text" id="loginId" name="loginId" required="required" placeholder="@Messages("user.yourLoginId")" class="text">
+          <input type="text" id="loginId" name="loginId" required="required" placeholder="@Messages("user.yourLoginId")" class="text" @if(!UserApp.currentUser().isAnonymous){value="@UserApp.currentUser().loginId"}>
         </dd>
 
         <dt>
           <label for="emailAddress">@Messages("user.email")</label>
         </dt>
         <dd>
-          <input type="text" id="emailAddress" name="emailAddress" required="" placeholder="@Messages("user.yourEmail")" class="text">
+          <input type="text" id="emailAddress" name="emailAddress" required="" placeholder="@Messages("user.yourEmail")" class="text" @if(!UserApp.currentUser().isAnonymous){value="@UserApp.currentUser().email"}>
         </dd>
       </dl>
 
