--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6419,6 +6419,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 
 .watch-on {
     background-color: #b6da54 !important;
+    background-image: none !important;
 }
 
 .nofocus{
