subtask: Support basic subtask feature

--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -114,6 +114,8 @@ input[type=number]::-webkit-outer-spin-button {
         filter:none;
         &.orange { background:@orange; .box-shadow(none); } // #f28149
         &.blue   { background:@blue;   .box-shadow(none); }
+        &.grey   { background:@gray-9e;   .box-shadow(none); }
+        &.done   { background:@light-green;   .box-shadow(none); }
         &.open   { background:@state-open; .box-shadow(none); }
         &.closed { background:@state-closed; .box-shadow(none); }
     }
