--- a/app/assets/stylesheets/less/_variables.less
+++ b/app/assets/stylesheets/less/_variables.less
@@ -22,11 +22,14 @@
 @low-white: #efefef;
 @black  : #000;
 @orange : #F36C22;
+@orangeLighter : #f68c52;
 @purple : #8d008d;
 @blue   : #5DBBE0;
 @blue2  : #51AACC;
 @darkgray: #878787;
 @green: #007fca;
+@light-green: #8bc34a;
+@light-cyan: #00BCD4;
 @darkmagenta: #8B008B;
 
 @gray-d4: #D4D4D4;
@@ -42,6 +45,7 @@
 @gray-52: #5D5D5D;
 @gray-f2: #F2F2F2;
 @gray-d9: #D9D9D9;
+@gray-9e: #9E9E9E;
 
 // new color scheme
 
