--- a/app/views/common/select2.scala.html
+++ b/app/views/common/select2.scala.html
@@ -52,9 +52,14 @@
 </div>
 </script>
 <script id="tplSelect2ProjectsWithoutAvatar" type="text/x-jquery-tmpl">
-<div class="usf-group" title="${name}>
-    <span class="avatar-wrap smaller"> </span>
+<div class="usf-group" title="${name}">
+    <span class="width16px"></span>
     <span class="name">${name}</span>
 </div>
 </script>
 
+<script id="tplSelect2FormatIssues" type="text/x-jquery-tmpl">
+<div title="${name}">
+    ${name}
+</div>
+</script>
