--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -1,24 +1,11 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2012 NAVER Corp.
-* http://yobi.io
-*
-* @author park3251
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
-@(title:String, issueForm: play.data.Form[Issue], issue:Issue,  project:Project)
+@import play.data.Form
+@(title:String, issueForm: Form[Issue], issue:Issue,  project:Project)
 @import helper._
 @import scala.collection.mutable.Map
 @import models.enumeration.ResourceType
@@ -26,10 +13,16 @@
 @import models.enumeration._
 @import utils.AccessControl._
 @import utils.TemplateHelper._
+@parentIssueId = @{
+    if(issue.parent != null) {
+        issue.parent.id
+    } else {
+        null
+    }
+}
 
 @projectLayout(Messages(title), project, utils.MenuType.ISSUE) {
 @projectMenu(project, utils.MenuType.ISSUE, "main-menu-only")
-
 <div class="page-wrap-outer">
     <div class="project-page-wrap">
         <div class="content-wrap frm-wrap">
@@ -52,6 +45,7 @@
     							}
     							</div>
     						}
+                          @partial_select_subtask(project, issue, parentIssueId)
     					}
                     </dd>
                 </dl>
