--- a/app/views/issue/partial_list.scala.html
+++ b/app/views/issue/partial_list.scala.html
@@ -1,29 +1,17 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2013 NAVER Corp.
-* http://yobi.io
-*
-* @author Suwon Chae
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
-@(project:Project, issueList:Collection[Issue], searchCondition:models.support.SearchCondition, pageIndex:Int, totalPageCount:Int)
+@import models.support.SearchCondition
+@(project:Project, issueList:Collection[Issue], searchCondition:SearchCondition, pageIndex:Int, totalPageCount:Int)
 
 @import java.util
 @import utils.JodaDateUtil
 @import utils.TemplateHelper._
 @import utils.AccessControl._
+@import models.enumeration.State
 
 
 @issueLabels(issue:Issue) = {@for(label <- issue.labels.toList.sortBy(r => (r.category.name, r.name))) {@label.category.name,@label.id,@label.name|}}
@@ -68,8 +56,10 @@
                         @agoOrDateString(issue.createdDate)
                     </span>
 
+                    @partial_list_subtask(project, issue)
+
                     @if(project.menuSetting.milestone && issue.milestone != null) {
-                    <span class="infos-item mileston-tag">
+                    <span class="mileston-tag">
                         <a href="@routes.MilestoneApp.milestone(project.owner, project.name, issue.milestone.id)" data-toggle="tooltip" data-placement="bottom" title="@Messages("milestone")">
                             @issue.milestone.title
                         </a>
